--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 				<li class="menu-item"><a href="/genres">Genres</a></li>
 				<li class="menu-item"><a href="/jeux">Jeux</a></li>
 				<li class="menu-item"><a href="/exemplaires">Exemplaires</a></li>
-				
+				<li class="menu-item"><a href="/locations">Locations</a></li>
 			</ul>
 		</nav>
 	</header>
