--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<nav class="navbar">
 			<div class="navbar-brand">
-				<a href="#" class="brand-logo">La Crypte des Jeux</a>
+				<a href="/" class="brand-logo">La Crypte des Jeux</a>
 			</div>
 			<ul class="navbar-menu">
 				<li class="menu-item"><a href="/clients">Clients</a></li>
