detail page clients + jeux

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -170,6 +170,14 @@ table a:hover {
 	text-decoration: none;
 }
 
+.action-btn.detail {
+	background-color: #17a2b8; /* Bleu clair pour le bouton "Détail" */
+}
+
+.action-btn.detail:hover {
+	background-color: #138496; /* Couleur plus sombre au survol */
+}
+
 .action-btn.edit {
 	background-color: #ffc107;
 }
