--- a/src/main/resources/templates/exemplaires/liste.html
+++ b/src/main/resources/templates/exemplaires/liste.html
@@ -9,7 +9,7 @@
 					<th>Code-barre</th>
 					<th>Jeu</th>
 					<th>Statut</th>
-					<th>Actions</th>
+					<th>Action</th>
 				</tr>
 			</thead>
 			<tbody>
