--- a/src/main/resources/templates/locations/liste.html
+++ b/src/main/resources/templates/locations/liste.html
@@ -10,7 +10,7 @@
 					<th>Date début</th>
 					<th>Date fin</th>
 					<th>Prix total</th>
-					<th>Actions</th>
+					<th>Action</th>
 				</tr>
 			</thead>
 			<tbody>
